--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">problems</a>
+                    <a class="nav-link" href="#main">problems</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">schedule</a>
+                    <a class="nav-link" href="#main">schedule</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/profile">forms</a>
@@ -41,82 +41,81 @@
     </div>
 </header>
 <main>
- <section id="main" class="page active">
-     <div class="main" id="A">
-         <div class="one">
-             <div class="container main_c">
-                 <div class="main_one">
-                     <h1 class="main_title">Make computer vision and artificial intelligence systems closer to students</h1>
-                     <button class="main_btn_one">LOG IN</button>
-                     <button class="main_btn_two">SIGN IN</button>
-                 </div>
-                 <div class="main_two">
-                     <img src="assets/circle.svg" alt="1фото">
-                 </div>
-             </div>
-         </div>
-     </div>
-     <div>
-         <div class="problems">
-             <h3 class="problems_title">Problems</h3>
-             <div class="problems_cards">
-                 <div class="card">
-                     <img class="card_img" src="assets/card_1.png" alt="card_1"/>
-                     <span class="card_title">Automatic class attendance</span>
-                 </div>
-                 <div class="card">
-                     <img class="card_img" src="assets/card_2.png" alt="card_2"/>
-                     <span class="card_title">Food recognition for cafeteria and dining hall</span>
-                 </div>
-                 <div class="card">
-                     <img class="card_img" src="assets/card_3.png" alt="card_3"/>
-                     <span class="card_title">Pathology detection by photo of ECG</span>
-                 </div>
-                 <div class="card">
-                     <img class="card_img" src="assets/card_4.png" alt="card_4"/>
-                     <span class="card_title">Automatic gate for cars with license plate number recognition</span>
-                 </div>
-                 <div class="card">
-                     <img class="card_img" src="assets/card_5.png" alt="card_15"/>
-                     <span class="card_title">Handwritten text recognition</span>
-                 </div>
-                 <div class="card">
-                     <img class="card_img" src="assets/card_6.png" alt="card_6"/>
-                     <span class="card_title">Automatic traffic light based on computer vision</span>
-                 </div>
-             </div>
-         </div>
-     </div>
-     <div class="bg">
-         <div class="schedule" id="B">
-             <div class="container">
-                 <h3 class="schedule_title">Schedule</h3>
-                 <div class="schedule_cards">
-                     <img src="assets/schedule.svg" alt="schedule"/>
-                 </div>
-             </div>
-         </div>
-         <div class="forms">
-             <div class="container">
-                 <div class="form_wrapper">
-                     <div>
-                         <h3 class="form_title">Forms</h3>
-                         <div class="form">
-                             <label for="name">Name</label>
-                             <input type="text" id="name" placeholder="Name...">
-                             <label for="email">Email</label>
-                             <input type="email" id="email" placeholder="Email...">
-                             <label for="password">Password</label>
-                             <input type="text" id="password" placeholder="Password...">
-                         </div>
-                         <button type="submit" class="submit_btn">Submit</button>
-                     </div>
-                 </div>
-             </div>
-         </div>
-     </div>
- </section>
-
+    <section id="main" class="page active">
+        <div class="main" id="A">
+            <div class="one">
+                <div class="container main_c">
+                    <div class="main_one">
+                        <h1 class="main_title">Make computer vision and artificial intelligence systems closer to students</h1>
+                        <button class="main_btn_one">LOG IN</button>
+                        <button class="main_btn_two">SIGN IN</button>
+                    </div>
+                    <div class="main_two">
+                        <img src="assets/circle.svg" alt="1фото">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="problems">
+                <h3 class="problems_title">Problems</h3>
+                <div class="problems_cards">
+                    <div class="card">
+                        <img class="card_img" src="assets/card_1.png" alt="card_1"/>
+                        <span class="card_title">Automatic class attendance</span>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="assets/card_2.png" alt="card_2"/>
+                        <span class="card_title">Food recognition for cafeteria and dining hall</span>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="assets/card_3.png" alt="card_3"/>
+                        <span class="card_title">Pathology detection by photo of ECG</span>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="assets/card_4.png" alt="card_4"/>
+                        <span class="card_title">Automatic gate for cars with license plate number recognition</span>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="assets/card_5.png" alt="card_15"/>
+                        <span class="card_title">Handwritten text recognition</span>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="assets/card_6.png" alt="card_6"/>
+                        <span class="card_title">Automatic traffic light based on computer vision</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg">
+            <div class="schedule" id="B">
+                <div class="container">
+                    <h3 class="schedule_title">Schedule</h3>
+                    <div class="schedule_cards">
+                        <img src="assets/schedule.svg" alt="schedule"/>
+                    </div>
+                </div>
+            </div>
+            <div class="forms">
+                <div class="container">
+                    <div class="form_wrapper">
+                        <div>
+                            <h3 class="form_title">Forms</h3>
+                            <div class="form">
+                                <label for="name">Name</label>
+                                <input type="text" id="name" placeholder="Name...">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" placeholder="Email...">
+                                <label for="password">Password</label>
+                                <input type="text" id="password" placeholder="Password...">
+                            </div>
+                            <button type="submit" class="submit_btn">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="profile" class="page">
         <div class="profile-container">
             <aside class="profile-sidebar">
@@ -124,9 +123,9 @@
                     <h2 class="profile-user-title">USER</h2>
                     <nav class="profile-nav-menu">
                         <ul>
-                            <li class="profile-nav-item active"><a href="#">Profile</a></li>
-                            <li class="profile-nav-item"><a href="#">Teams</a></li>
-                            <li class="profile-nav-item"><a href="#">Team Market</a></li>
+                            <li class="profile-nav-item active"><a href="#main">Profile</a></li>
+                            <li class="profile-nav-item"><a href="#main">Teams</a></li>
+                            <li class="profile-nav-item"><a href="#main">Team Market</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -135,7 +134,7 @@
             <main class="profile-main-content">
                 <div class="profile-header">
                     <button class="profile-back-button back-button">
-                       <img src="assets/back.svg" alt="btn">
+                        <img src="assets/back.svg" alt="btn">
                     </button>
                     <div class="profile-info">
                         <div class="profile-picture">
@@ -188,10 +187,10 @@
 
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">problems</a>
+                    <a class="nav-link back-button" href="#main">problems</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">schedule</a>
+                    <a class="nav-link" href="#main">schedule</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/profile">forms</a>
